--- a/movie.html
+++ b/movie.html
@@ -2,49 +2,39 @@
 <html lang="en">
 
 <head>
-    <title>OneRepublic</title>
+    <title>Avatar</title>
+    <link rel="stylesheet" tpe="text/css" href="format1.css">
     <meta charset="utf-8">
 </head>
 
 <body>
     <header>
-        <h1>OneRepublic's Top Songs</h1>
+        <h1>Avatar</h1>
     </header>
 
     <nav>
         <b>
-            <a href="band.html">Home</a> &nbsp;
-            <a href="https://www.onerepublic.com">OneRepublic Website</a> 
+            <a href="movie.html">Home</a> &nbsp;
+            <a href="https://www.avatar.com/">Avatar Website</a> 
         </b>
     </nav>
 
     <main>
-        <h2>Background on OneRepublic</h2>
-        <p>OneRepublic is an American pop rock band formed in Colorado Springs, Colorado, in 2002.</p>
-
-        <h3>Members</h3>
+        <h2>Avatars Background</h2>
+        <p>On the lush alien world of Pandora live the Na'vi, beings who appear primitive but are highly evolved. 
+            Because the planet's environment is poisonous, human/Na'vi hybrids, called Avatars, must link to human minds to allow for free movement on Pandora. 
+            Jake Sully (Sam Worthington), a paralyzed former Marine, becomes mobile again through one such Avatar and falls in love with a Na'vi woman (Zoe Saldana). 
+            As a bond with her grows, he is drawn into a battle for the survival of her world.</p>
+<hr>
+        <h3>Avatars Cast</h3>
         <ul>
-            <li>Ryan Tedder</li>
-            <li>Zach Filkins</li>
-            <li>Drew Brown</li>
-            <li>Brent Kutzle</li>
-            <li>Eddie Fisher</li>
-            <li>Brian Willet</li>
+            <li>Sam Worthington</li>
+            <li>Zoe Saldana</li>
+            <li>Sigourney Weaver</li>
+            <li>Joel David Moore</li>
+            <li>Stephen Lang</li>
+            <li>Michelle Rodriguez</li>
         </ul>
-
-
-        <h3>My Favorite Songs</h3>
-        <dl>
-            <dt><strong>Counting Stars</strong></dt>
-            <dd>"Counting Stars" is a song by American pop rock band OneRepublic from their third studio album, Native (2013). 
-                The song was written by lead singer Ryan Tedder, and produced by Tedder and Noel Zancanella. 
-                It was released as the album's second single on June 14, 2013.</dd>
-            <dt><strong>Apologize</strong></dt>
-            <dd>"Apologize" is a song written by Ryan Tedder, which first appeared on Timbaland's second studio album Shock Value (2007). 
-                It was then released as the third single from that album (fourth in Australia), along with the original recording by OneRepublic.</dd>
-            <dt><strong>Secrets</strong></dt>
-            <dd>"Secrets" is the second single released from OneRepublic's second studio album, Waking Up.</dd>
-            </dl>
     </main>
 
 
